--- a/ubiquity/chrome/locale/zh-CN/devubiquity.properties
+++ b/ubiquity/chrome/locale/zh-CN/devubiquity.properties
@@ -28,7 +28,7 @@ ubiquity.playpen.name=名称：
 ubiquity.playpen.nountype=名词输入：
 ubiquity.playpen.step1=步骤 1：分词
 ubiquity.playpen.step2=步骤 2：选择可能动词
-ubiquity.playpen.step3=step 3: pick possible clitics (TODO)
+ubiquity.playpen.step3=步骤3：选择可能的附着词（待办事项）
 ubiquity.playpen.step4=步骤 4：分组到参数
 ubiquity.playpen.step5=步骤 5：参数替换
 ubiquity.playpen.step6=步骤 6：替换正常参数
@@ -37,7 +37,7 @@ ubiquity.playpen.step8=步骤 8：建议动词
 ubiquity.playpen.step9=步骤 9-11：完成
 ubiquity.playpen.parsespossible=可能解析
 ubiquity.playpen.parsedverbs=解析和动词
-ubiquity.playpen.parsednouns=parses with noun suggestions swapped in, and scored
+ubiquity.playpen.parsednouns=在名次解析与建议交换，并取得
 ############################
 
 # chrome://ubiquity/content/test.xhtml
