--- a/ubiquity/chrome/locale/zh-CN/devubiquity.dtd
+++ b/ubiquity/chrome/locale/zh-CN/devubiquity.dtd
@@ -24,17 +24,17 @@
 <!ENTITY ubiquity.playpen.SelectionText "选择文本 (for anaphora substitution)：">
 <!ENTITY ubiquity.playpen.EnvironmentInfo "环境信息 <small>(按我切换)</small>">
 <!ENTITY ubiquity.playpen.ActiveSemanticRoles "主动语义作用：">
-<!ENTITY ubiquity.playpen.NotesOverlapping "(overlapping roles with the same delimiters indicate synonymous delimiters)">
+<!ENTITY ubiquity.playpen.NotesOverlapping "（显示重叠作用用同样的分隔符的同义词）">
 <!ENTITY ubiquity.playpen.ActiveNounTypes "主动名词类型：">
 <!ENTITY ubiquity.playpen.ScoreFunctions "（查看开源的评分功能）">
 <!ENTITY ubiquity.playpen.ActiveVerbs "主动动词：">
 <!ENTITY ubiquity.playpen.WordSuggestions "建议">
-<!ENTITY ubiquity.playpen.WordKey "KEY:">
+<!ENTITY ubiquity.playpen.WordKey "KEY：">
 <!ENTITY ubiquity.playpen.WordVerb "动词">
 <!ENTITY ubiquity.playpen.WordObject "对象">
 <!ENTITY ubiquity.playpen.WordPrefix "前缀">
 <!ENTITY ubiquity.playpen.WordArgument "理由">
-<!ENTITY ubiquity.playpen.VerbsNote "(hover over the verb to see the actual verb and over prefixes to see the associated semantic role)">
+<!ENTITY ubiquity.playpen.VerbsNote "（悬停这个动词看到实际动词和以上前缀来看到这个相关的语义作用）">
 <!ENTITY ubiquity.playpen.CurrentParse "当前解析：">
 <!ENTITY ubiquity.playpen.AvgTimingResults "ms (avg: <span class='avg'></span> ms)">
 <!ENTITY ubiquity.playpen.ParseTree "当前查询的解析树：">
@@ -50,10 +50,10 @@
 <!ENTITY ubiquity.testsuite.TestsRunning "运行测试...">
 <!-- Test Suite chrome/content/tuner.xhtml -->
 <!ENTITY ubiquity.tuner.Header "&appTitle; Nountype Tuner">
-<!ENTITY ubiquity.tuner.ShortDesc "This tuner allows you to test different inputs against the active nountypes and verify their suggestions. It is particularly helpful for developers to get a sense for how to tweak their nountype suggestions' scores. <strong>NOTE: the nountype tuner clears the <code>nounCache</code> on each run.</strong>">
+<!ENTITY ubiquity.tuner.ShortDesc "此调谐器可让您测试对不同的主动名词输入和验证的支持。这对开发人员用来检测是非常有用的，用于如何调整自己的名词输入支持分数。<strong>注意：名词输入调谐器会在每次运行时清除 <code>名词缓存</code></strong>">
 <!ENTITY ubiquity.tuner.OptionMaxSuggs "每 nountype 最大的建议：">
 <!ENTITY ubiquity.tuner.OptionParserTip "使用与当前 &appTitle; 例子相同的解析器">
 <!ENTITY ubiquity.tuner.OptionGSync "用 <code>gUbiquity</code> 同步">
 <!ENTITY ubiquity.tuner.HeaderSuggestions "建议">
-<!ENTITY ubiquity.tuner.THeadNounType "nountype">
+<!ENTITY ubiquity.tuner.THeadNounType "名词输入">
 <!ENTITY ubiquity.tuner.THeadSuggestion "建议">
