--- a/ubiquity/chrome/locale/it-IT/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquity.dtd
@@ -99,7 +99,7 @@
 <!ENTITY ubiquity.support.ResetUbiquityParagraph1 "Se &appTitle; dovesse diventare completamente ingovernabile, potrebbe essere necessario dover azzerare le impostazioni ripristinando la “configurazione iniziale” prima di poter usare nuovamente &appTitle;. Per azzerare &appTitle;, <a href='&chrome.reset;'>fare clic qui</a> — e, per favore, accetta le nostre scuse per il disagio arrecato.">
 <!-- Hack chrome/content/editor.xhtml -->
 <!ENTITY ubiquity.editor.CommandEditorHeader "Editor comandi di &appTitle;">
-<!ENTITY ubiquity.editor.CommandEditorNewCommands "<strong>Crea nuovif comandi</strong>inserendo il codice nell'area testuale qui sotto. Essi verranno salvati mentre si sta scrivendo e saranno immediatamente disponibili per essere utilizzati.">
+<!ENTITY ubiquity.editor.CommandEditorNewCommands "<strong>Crea nuovi comandi</strong>inserendo il codice nell'area testuale qui sotto. Essi verranno salvati mentre si sta scrivendo e saranno immediatamente disponibili per essere utilizzati.">
 <!ENTITY ubiquity.editor.CommandEditorReadAuthTutorial "Per saperne di più, <strong>consultare il <a href='&link.cmdTutorial;'>tutorial sulla creazione di un comando</a></strong>. Per esempio di commandi built-in, <a href='&file.FeedsIndex;'>dare un'occhiata qui</a>.">
 <!ENTITY ubiquity.editor.CommandEditorReadTheDocs "Documentazione delle<a href='&file.DevelDocs;'>API per la creazione di un comando</a>">
 <!ENTITY ubiquity.editor.CommandEditorGetInvolved "<strong>Rimani connesso</strong>. Per saperne di più, visita <a href='&link.wikiMain;'>la wiki del progetto &appTitle;</a>.">
