--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -18,6 +18,7 @@ ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
 ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
 ubiquity.feedmanager.showme=Show me!
 ubiquity.feedmanager.dontremind=Don't remind me again for this website
+ubiquity.feedmanager.never=Never
 ubiquity.feedmanager.newcommandfound=This page contains Ubiquity commands. If you'd like to subscribe to them, please click the button to the right.
 ubiquity.feedmanager.subscribe=Subscribe...
 
