Cleaning out left over errorToLocalize comments and wrangling remaining strings to be localized before handing them to BZ.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -8,6 +8,7 @@ ubiquity.nav.commands=Your Commands
 ubiquity.nav.getnewcommands=Get New Commands
 ubiquity.nav.support=Support
 ubiquity.nav.hackubiquity=Hack Ubiquity
+ubiquity.nav.githubpastename=Pasting to gist.github.com with the following name:
 
 ############################
 # /chrome/content/localization-template.js
@@ -22,6 +23,13 @@ ubiquity.showhidehelp.show=Show Help
 ubiquity.showhidehelp.hide=Hide Help
 
 # end global properties, begin by file name.
+
+############################
+# /chrome/content/editor.js
+# chrome://ubiquity/content/editor.xhtml
+
+ubiquity.editor.savelogmsgp1=The command source was saved to %S and you have been automatically subscribed to it. Any changes saved will take effect the moment you invoke Ubiquity.
+ubiquity.editor.savelogmsgp2=You can view and remove this subscription in your <a href='about:ubiquity?cmdlist'>Command List</a>.
 
 ############################
 # /chrome/content/prefkeys.js
